--- a/firefly-iii-2.0.0-v2.yaml
+++ b/firefly-iii-2.0.0-v2.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.0
 servers:
   - description: Firefly III demo site
-    url: https://demo.firefly-iii.org/api/v2
+    url: https://demo.firefly-iii.org/api
 info:
-  title: Firefly III API v2.0.0 (v2)
+  title: Firefly III API v2.0.0
   description: |
-    This is the documentation of the Firefly III API (v2). You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2022-06-26T08:57:16+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-11T19:36:09+00:00
   version: "2.0.0"
   contact:
     name: James Cole
@@ -15,19 +15,13 @@ info:
     name: AGPLv3
     url: 'https://www.gnu.org/licenses/agpl-3.0.en.html'
 tags:
-- name: charts
-  description: The &quot;charts&quot; endpoints deliver optimised data for charts and graphs.
 - name: net-worth
   description: Shows you the net worth of the current user.
-- name: accounts
-  description: Endpoints that deliver all of the user&#039;s asset, expense and other accounts
-    (and the metadata) together with related transactions, piggy banks and other objects.
-    Also delivers endpoints for CRUD operations for accounts.
 - name: transactions-sum
   description: Endpoints to sum transactions based on various properties.
 
 paths:
-  /net-worth:
+  /v2/net-worth:
     get:
       tags:
         - net-worth
@@ -89,7 +83,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionSumArray'
-  /chart/account/dashboard:
+  /v2/chart/account/dashboard:
     get:
       tags:
         - charts
@@ -151,8 +145,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ChartLine'
-  /bills/sum/paid:
+                $ref: '#/components/schemas/ChartLineV2'
+  /v2/bills/sum/paid:
     get:
       tags:
         - transactions-sum
@@ -221,7 +215,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionSumArray'
-  /accounts/{id}/transactions:
+  /v2/accounts/{id}/transactions:
     get:
       tags:
         - accounts
@@ -391,6 +385,150 @@ components:
           format: int32
           example: 2
           description: "Number of decimal places for this currency."
+    ChartDataSetV2:
+      type: object
+      properties:
+        label:
+          type: string
+          format: string
+          example: "Checking account"
+          description: "This is the title of the current set. It can refer to an account, a budget or another object (by name)."
+        currency_id:
+          type: string
+          format: string
+          example: "5"
+          description: "The currency ID of the currency associated to the data in the entries."
+        currency_code:
+          type: string
+          format: string
+          example: "EUR"
+        currency_symbol:
+          type: string
+          format: string
+          example: "$"
+        currency_decimal_places:
+          type: integer
+          format: int32
+          example: 2
+          description: "Number of decimals for the currency associated to the data in the entries."
+        native_id:
+          type: string
+          format: string
+          example: "5"
+          description: "The currency ID of the user's native currency."
+        native_code:
+          type: string
+          format: string
+          example: "EUR"
+          description: "The currency code of the user's native currency."
+        native_symbol:
+          type: string
+          format: string
+          example: "$"
+          description: "The currency symbol of the user's native currency."
+        native_decimal_places:
+          type: integer
+          format: int32
+          example: 2
+          description: "Number of decimals for the native currency of the user."
+        converted:
+          type: boolean
+          format: boolean
+          example: true
+          description: "This variable holds whether or not the values in the 'entries'-array are converted to the user's native currency."
+        start_date:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+        end_date:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+        type:
+          type: string
+          format: string
+          example: "line"
+          description: "Indicated the type of chart that is expected to be rendered. You can safely ignore this if you want."
+        yAxisID:
+          type: integer
+          format: int32
+          example: 0
+          description: "Used to indicate the Y axis for this data set. Is usually between 0 and 1 (left and right side of the chart)."
+        entries:
+          type: object
+          description: "The actual entries for this data set. They 'key' value is the label for the data point. The value is the actual (numerical) value."
+          items:
+            $ref: '#/components/schemas/ChartDataPointV2'
+    ChartLineV2:
+      type: array
+      items:
+        $ref: '#/components/schemas/ChartDataSetV2'
+    ChartDataPointV2:
+      type: object
+      properties:
+        key:
+          type: string
+          format: string
+          example: "value"
+          description: "The key is the label of the value, so for example: '2018-01-01' => 13 or 'Groceries' => -123."
+    TransactionSumArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/TransactionSum'
+    TransactionArray:
+      type: object
+      required:
+        - data
+        - meta
+        - links
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/TransactionRead'
+        meta:
+          $ref: '#/components/schemas/Meta'
+        links:
+          $ref: '#/components/schemas/PageLink'
+    TransactionRead:
+      type: object
+      required:
+        - type
+        - id
+        - attributes
+        - links
+      properties:
+        type:
+          type: string
+          format: string
+          example: "transactions"
+          description: "Immutable value"
+        id:
+          type: string
+          format: string
+          example: "2"
+        attributes:
+          $ref: '#/components/schemas/Transaction'
+        links:
+          $ref: '#/components/schemas/ObjectLink'
+    ObjectLink:
+      type: object
+      properties:
+        0:
+          type: object
+          properties:
+            rel:
+              type: string
+              format: string
+              example: "self"
+            uri:
+              type: string
+              format: string
+              example: "/OBJECTS/1"
+        self:
+          type: string
+          format: uri
+          example: "https://demo.firefly-iii.org/api/v1/OBJECTS/1"
     Transaction:
       type: object
       required:
@@ -423,42 +561,42 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TransactionSplit'
-    TransactionRead:
+    PageLink:
       type: object
-      required:
-        - type
-        - id
-        - attributes
-        - links
       properties:
-        type:
+        self:
           type: string
-          format: string
-          example: "transactions"
-          description: "Immutable value"
-        id:
+          format: uri
+          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=4"
+        first:
           type: string
-          format: string
-          example: "2"
-        attributes:
-          $ref: '#/components/schemas/Transaction'
-        links:
-          $ref: '#/components/schemas/ObjectLink'
-    TransactionArray:
+          format: uri
+          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=1"
+        last:
+          type: string
+          format: uri
+          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=12"
+    Meta:
       type: object
-      required:
-        - data
-        - meta
-        - links
       properties:
-        data:
-          type: array
-          items:
-            $ref: '#/components/schemas/TransactionRead'
-        meta:
-          $ref: '#/components/schemas/Meta'
-        links:
-          $ref: '#/components/schemas/PageLink'
+        pagination:
+          type: object
+          properties:
+            total:
+              type: integer
+              example: 3
+            count:
+              type: integer
+              example: 20
+            per_page:
+              type: integer
+              example: 100
+            current_page:
+              type: integer
+              example: 1
+            total_pages:
+              type: integer
+              example: 1
     TransactionSplit:
       type: object
       required:
@@ -801,331 +939,6 @@ components:
           format: boolean
           example: false
           description: "If the transaction has attachments."
-    ChartLine:
-      type: array
-      items:
-        $ref: '#/components/schemas/ChartDataSet'
-    ChartDataSet:
-      type: object
-      properties:
-        label:
-          type: string
-          format: string
-          example: "Checking account"
-          description: "This is the title of the current set. It can refer to an account, a budget or another object (by name)."
-        currency_id:
-          type: string
-          format: string
-          example: "5"
-          description: "The currency ID of the currency associated to the data in the entries."
-        currency_code:
-          type: string
-          format: string
-          example: "EUR"
-        currency_symbol:
-          type: string
-          format: string
-          example: "$"
-        currency_decimal_places:
-          type: integer
-          format: int32
-          example: 2
-          description: "Number of decimals for the currency associated to the data in the entries."
-        native_id:
-          type: string
-          format: string
-          example: "5"
-          description: "The currency ID of the user's native currency."
-        native_code:
-          type: string
-          format: string
-          example: "EUR"
-          description: "The currency code of the user's native currency."
-        native_symbol:
-          type: string
-          format: string
-          example: "$"
-          description: "The currency symbol of the user's native currency."
-        native_decimal_places:
-          type: integer
-          format: int32
-          example: 2
-          description: "Number of decimals for the native currency of the user."
-        converted:
-          type: boolean
-          format: boolean
-          example: true
-          description: "This variable holds whether or not the values in the 'entries'-array are converted to the user's native currency."
-        start_date:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-        end_date:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-        type:
-          type: string
-          format: string
-          example: "line"
-          description: "Indicated the type of chart that is expected to be rendered. You can safely ignore this if you want."
-        yAxisID:
-          type: integer
-          format: int32
-          example: 0
-          description: "Used to indicate the Y axis for this data set. Is usually between 0 and 1 (left and right side of the chart)."
-        entries:
-          type: object
-          description: "The actual entries for this data set. They 'key' value is the label for the data point. The value is the actual (numerical) value."
-          items:
-            $ref: '#/components/schemas/ChartDataPoint'
-    ChartDataPoint:
-      type: object
-      properties:
-        key:
-          type: string
-          format: string
-          example: "value"
-          description: "The key is the label of the value, so for example: '2018-01-01' => 13 or 'Groceries' => -123."
-    AccountRead:
-      type: object
-      required:
-        - type
-        - id
-        - attributes
-      properties:
-        type:
-          type: string
-          format: string
-          example: "accounts"
-          description: "Immutable value"
-        id:
-          type: string
-          format: string
-          example: "2"
-        attributes:
-          $ref: '#/components/schemas/Account'
-    Account:
-      type: object
-      required:
-        - name
-        - type
-      properties:
-        created_at:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-          readOnly: true
-        updated_at:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-          readOnly: true
-        active:
-          type: boolean
-          format: boolean
-          example: false
-          default: true
-          description: "If omitted, defaults to true."
-        order:
-          type: integer
-          format: int32
-          example: 1
-          nullable: true
-          description: "Order of the account. Is NULL if account is not asset or liability."
-        name:
-          type: string
-          format: string
-          example: "My checking account"
-        type:
-          $ref: '#/components/schemas/ShortAccountTypeProperty'
-        account_role:
-          $ref: '#/components/schemas/AccountRoleProperty'
-        currency_id:
-          type: string
-          format: string
-          example: "12"
-          description: "Use either currency_id or currency_code. Defaults to the user's default currency."
-        currency_code:
-          type: string
-          format: string
-          example: "EUR"
-          description: "Use either currency_id or currency_code. Defaults to the user's default currency."
-        currency_symbol:
-          type: string
-          format: string
-          example: "$"
-          readOnly: true
-        currency_decimal_places:
-          type: integer
-          format: int32
-          example: 2
-          readOnly: true
-        current_balance:
-          type: string
-          format: amount
-          example: "123.45"
-          readOnly: true
-        current_balance_date:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-          readOnly: true
-        iban:
-          type: string
-          format: iban
-          example: "GB98MIDL07009312345678"
-          nullable: true
-        bic:
-          type: string
-          format: string
-          example: "BOFAUS3N"
-          nullable: true
-        account_number:
-          type: string
-          format: string
-          nullable: true
-          example: "7009312345678"
-        opening_balance:
-          type: string
-          format: amount
-          example: "-1012.12"
-          description: Represents the opening balance, the initial amount this account holds.
-        current_debt:
-          type: string
-          format: amount
-          nullable: true
-          example: "1012.12"
-          description: Represents the current debt for liabilities.
-        opening_balance_date:
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-          nullable: true
-          description: Represents the date of the opening balance.
-        virtual_balance:
-          type: string
-          format: amount
-          example: "123.45"
-        include_net_worth:
-          type: boolean
-          format: boolean
-          example: true
-          default: true
-          description: "If omitted, defaults to true."
-        credit_card_type:
-          $ref: '#/components/schemas/CreditCardType'
-        monthly_payment_date:
-          nullable: true
-          type: string
-          format: date-time
-          example: "2018-09-17T12:46:47+01:00"
-          description: "Mandatory when the account_role is ccAsset. Moment at which CC payment installments are asked for by the bank."
-        liability_type:
-          $ref: '#/components/schemas/LiabilityType'
-        liability_direction:
-          $ref: '#/components/schemas/LiabilityDirection'
-        interest:
-          type: string
-          format: string
-          example: "5.3"
-          description: "Mandatory when type is liability. Interest percentage."
-          nullable: true
-        interest_period:
-          $ref: '#/components/schemas/InterestPeriod'
-        notes:
-          type: string
-          format: string
-          nullable: true
-          example: "Some example notes"
-        latitude:
-          type: number
-          format: double
-          example: 51.983333
-          nullable: true
-          description: Latitude of the accounts's location, if applicable. Can be used to draw a map.
-        longitude:
-          type: number
-          format: double
-          example: 5.916667
-          nullable: true
-          description: Latitude of the accounts's location, if applicable. Can be used to draw a map.
-        zoom_level:
-          type: integer
-          format: int32
-          example: 6
-          nullable: true
-          description: "Zoom level for the map, if drawn. This to set the box right. Unfortunately this is a proprietary value because each map provider has different zoom levels."
-    AccountArray:
-      type: object
-      required:
-        - data
-        - meta
-      properties:
-        data:
-          type: array
-          items:
-            $ref: '#/components/schemas/AccountRead'
-        meta:
-          $ref: '#/components/schemas/Meta'
-    TransactionSumArray:
-      type: array
-      items:
-        $ref: '#/components/schemas/TransactionSum'
-    ObjectLink:
-      type: object
-      properties:
-        0:
-          type: object
-          properties:
-            rel:
-              type: string
-              format: string
-              example: "self"
-            uri:
-              type: string
-              format: string
-              example: "/OBJECTS/1"
-        self:
-          type: string
-          format: uri
-          example: "https://demo.firefly-iii.org/api/v1/OBJECTS/1"
-    PageLink:
-      type: object
-      properties:
-        self:
-          type: string
-          format: uri
-          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=4"
-        first:
-          type: string
-          format: uri
-          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=1"
-        last:
-          type: string
-          format: uri
-          example: "https://demo.firefly-iii.org/api/v1/OBJECT?&page=12"
-    Meta:
-      type: object
-      properties:
-        pagination:
-          type: object
-          properties:
-            total:
-              type: integer
-              example: 3
-            count:
-              type: integer
-              example: 20
-            per_page:
-              type: integer
-              example: 100
-            current_page:
-              type: integer
-              example: 1
-            total_pages:
-              type: integer
-              example: 1
     LiabilityType:
       type: string
       format: string
