--- a/firefly-iii-2.0.0-v1.yaml
+++ b/firefly-iii-2.0.0-v1.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v2.0.0
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-11T19:52:57+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-12T05:24:23+00:00
   version: "2.0.0"
   contact:
     name: James Cole
@@ -5657,7 +5657,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/object_groups:
+  /v1/object-groups:
     get:
       summary: List all oject groups.
       description: List all oject groups.
@@ -5710,7 +5710,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/object_groups/{id}:
+  /v1/object-groups/{id}:
     get:
       summary: Get a single object group.
       description: Get a single object group.
@@ -6366,7 +6366,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/transactions/{id}/piggy_bank_events:
+  /v1/transactions/{id}/piggy-bank-events:
     get:
       summary: Lists all piggy bank events.
       description: Lists all piggy bank events.
@@ -6510,7 +6510,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/piggy_banks:
+  /v1/piggy-banks:
     get:
       summary: List all piggy banks.
       description: List all piggy banks.
@@ -6624,7 +6624,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/piggy_banks/{id}:
+  /v1/piggy-banks/{id}:
     get:
       summary: Get a single piggy bank.
       description: Get a single piggy bank.
@@ -8426,7 +8426,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/currencies/{code}/available_budgets:
+  /v1/currencies/{code}/available-budgets:
     get:
       summary: List all available budgets with this currency.
       description: List all available budgets with this currency.
@@ -9546,7 +9546,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/piggy_banks/{id}/events:
+  /v1/piggy-banks/{id}/events:
     get:
       summary: List all events linked to a piggy bank.
       description: List all events linked to a piggy bank (adding and removing money).
@@ -9606,7 +9606,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/piggy_banks/{id}/attachments:
+  /v1/piggy-banks/{id}/attachments:
     get:
       summary: Lists all attachments.
       description: Lists all attachments.
@@ -9666,7 +9666,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/rule_groups/{id}/rules:
+  /v1/rule-groups/{id}/rules:
     get:
       summary: List rules in this rule group.
       description: List rules in this rule group.
@@ -9726,7 +9726,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/rule_groups:
+  /v1/rule-groups:
     get:
       summary: List all rule groups.
       description: List all rule groups.
@@ -9840,7 +9840,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/rule_groups/{id}:
+  /v1/rule-groups/{id}:
     get:
       summary: Get a single rule group.
       description: Get a single rule group. This does not include the rules. For that, see below.
@@ -10009,7 +10009,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/link_types/{id}/transactions:
+  /v1/link-types/{id}/transactions:
     get:
       tags:
         - links
@@ -10094,7 +10094,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/available_budgets:
+  /v1/available-budgets:
     get:
       summary: List all available budget amounts.
       description: |
@@ -10166,7 +10166,7 @@ paths:
             application/vnd.api+json:
               schema:
                 $ref: '#/components/schemas/AvailableBudgetArray'
-  /v1/available_budgets/{id}:
+  /v1/available-budgets/{id}:
     get:
       summary: Get a single available budget.
       description: Get a single available budget, by ID.
@@ -10589,7 +10589,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/object_groups/{id}/piggy_banks:
+  /v1/object-groups/{id}/piggy-banks:
     get:
       tags:
         - object_groups
@@ -10649,7 +10649,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/object_groups/{id}/bills:
+  /v1/object-groups/{id}/bills:
     get:
       summary: List all bills with this object group.
       description: List all bills with this object group.
@@ -10708,7 +10708,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/transaction_links:
+  /v1/transaction-links:
     get:
       tags:
         - links
@@ -10823,7 +10823,7 @@ paths:
               $ref: '#/components/schemas/TransactionLinkStore'
         description: JSON array with the necessary link type information or key=value pairs. See the model for the exact specifications.
         required: true
-  /v1/transaction_links/{id}:
+  /v1/transaction-links/{id}:
     get:
       tags:
         - links
@@ -10995,7 +10995,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/link_types:
+  /v1/link-types:
     get:
       tags:
         - links
@@ -11110,7 +11110,7 @@ paths:
               $ref: '#/components/schemas/LinkType'
         description: JSON array with the necessary link type information or key=value pairs. See the model for the exact specifications.
         required: true
-  /v1/link_types/{id}:
+  /v1/link-types/{id}:
     get:
       tags:
         - links
@@ -11282,7 +11282,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/rule_groups/{id}/test:
+  /v1/rule-groups/{id}/test:
     get:
       summary: Test which transactions would be hit by the rule group. No changes will be made.
       description: Test which transactions would be hit by the rule group. No changes will be made. Limit the result if you want to.
@@ -11386,7 +11386,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalException'
-  /v1/rule_groups/{id}/trigger:
+  /v1/rule-groups/{id}/trigger:
     post:
       summary: Fire the rule group on your transactions.
       description: Fire the rule group on your transactions. Changes will be made by the rules in the rule group! Limit the result if you want to.
@@ -11617,7 +11617,7 @@ paths:
             application/vnd.api+json:
               schema:
                 $ref: '#/components/schemas/AttachmentArray'
-  /v1/accounts/{id}/piggy_banks:
+  /v1/accounts/{id}/piggy-banks:
     get:
       tags:
         - accounts
