--- a/firefly-iii-2.0.0-v1.yaml
+++ b/firefly-iii-2.0.0-v1.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v2.0.0
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-18T10:13:15+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-26T12:31:13+00:00
   version: "2.0.0"
   contact:
     name: James Cole
@@ -18217,6 +18217,11 @@ components:
     TransactionSplitUpdate:
       type: object
       properties:
+        transaction_journal_id:
+          type: string
+          format: string
+          example: "123"
+          description: "Transaction journal ID of current transaction (split)."
         date:
           type: string
           format: date-time
