--- a/firefly-iii-2.0.0-v1.yaml
+++ b/firefly-iii-2.0.0-v1.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v2.0.0
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-26T12:31:13+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-26T15:28:03+00:00
   version: "2.0.0"
   contact:
     name: James Cole
@@ -18222,6 +18222,8 @@ components:
           format: string
           example: "123"
           description: "Transaction journal ID of current transaction (split)."
+        type:
+          $ref: '#/components/schemas/TransactionTypeProperty'
         date:
           type: string
           format: date-time
